avoid double scrollbar

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10821,7 +10821,6 @@ a:focus {
 #wrapper #content-wrapper {
   background-color: #f8f9fc;
   width: 100%;
-  overflow-x: hidden;
 }
 
 #wrapper #content-wrapper #content {
