--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -21,7 +21,6 @@ a {
   #content-wrapper {
     background-color: $gray-100;
     width: 100%;
-    overflow-x: hidden;
     #content {
       flex: 1 0 auto;
     }
